--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -12,7 +12,7 @@
 }
 
 .topbar {
-  background-color: $coral;
+  background-color: $blue;
   height: 7em;
   color:white;
   position:sticky;
@@ -83,4 +83,5 @@
 #title-hospital-index {
   text-align: center;
   vertical-align: middle;
+  color: #0F90F3;
 }
