--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -33,6 +33,10 @@ h2 {
   text-align: right;
 }
 
+.home-title{
+  margin-left: 1em;
+  margin-top: 1em;
+}
 .profil-image-name {
   // position: absolute;
   display: flex;
