--- a/app/views/shared/_card_new_event.html.erb
+++ b/app/views/shared/_card_new_event.html.erb
@@ -6,12 +6,12 @@
   <% end %>
   <div class="card-top">
     <h1 class="card-title"><%= event.name %></h1>
-    <p class="max-participants"> <img src="https://img.icons8.com/cotton/64/000000/person-male--v2.png" width="25px"><%= "#{event.reservations.count}/#{event.max_participants}" %></p>
   </div>
-    <div class="card-event-infos-new mt-3">
+    <div class="card-event-infos-new mt-0">
     <h2> <i class="far fa-calendar-alt"></i><%= " #{I18n.localize(event.start, format: "%^a %d %^b")}" %></h2>
     <h2><i class="far fa-clock"></i> <%= "#{event.start.strftime("%I:%M %p")} - #{event.end.strftime("%I:%M %p")} "%></h2>
     <p><%= event.location %></p>
+    <p> <i class="far fa-user"></i><%= "  Il reste #{event.max_participants - event.reservations.count} places" %></p>
   </div>
     <%= link_to "", event_path(event), class: "card-link" %>
    </div>
