--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -51,7 +51,7 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  border-radius: 5px;
+  border-radius: 20px;
   position:relative;
   margin-bottom: 0.5em;
   position: relative;
@@ -100,7 +100,6 @@
   background-color: rgba(245, 245, 245, 1);
   opacity: 0.5;
 }
-
 .card-event-infos-new{
   margin: 1.5rem
 }
@@ -132,7 +131,8 @@
 .cards-disc{
  width: 100%;
  overflow-y: scroll;
- }
+ margin-left: 1em;
+  }
 
 
 // Smallest device
