--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,34 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :username,
-          autofocus: true,
-          required: true,
-          input_html: { autocomplete: "username" } %>
-    <%= f.input :email,
+<div class="container">
+  <div class="row justify-content-center" >
+    <div class="signup col-12 col-lg-6">
+      <div class="title-signup">
+        <h2>Sign up</h2>
+      </div>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.error_notification %>
+        <div class="form-inputs-signup">
+          <%= f.input :username,
+                autofocus: true,
                 required: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.association :hospital,
-                required: true,
-                input_html: { autocomplete: "your hospital?" } %>
-
-  </div>
+                input_html: { autocomplete: "username" } %>
+          <%= f.input :email,
+                      required: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.association :hospital,
+                      required: true,
+                      input_html: { autocomplete: "your hospital?" } %>
+        </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-block py-2 signup-btn' %>
   </div>
 <% end %>
 
