--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -13,7 +13,7 @@
       <div class="first-block">
         <%= f.input :photo, input_html: { id: 'photo-input', class: 'd-none'}, label: false %>
         <%= f.input :name, label: false,input_html: {class: 'ml-0'}, placeholder:'Nom de l\'événement' %>
-        <%= f.input :description,label: false, as: :string, placeholder: 'Description' %>
+        <%= f.input :description,label: false, as: :text, placeholder: 'Description' %>
       </div>
       <div class="second-block mt-5">
         <%= f.input :start, label: false, as: :string, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
