--- a/app/assets/stylesheets/components/_signin-form.scss
+++ b/app/assets/stylesheets/components/_signin-form.scss
@@ -13,6 +13,11 @@
   text-align: left;
 }
 
+.form-inputs-signin label {
+  font-size: 14px;
+  text-align: left;
+}
+
 .form-inputs-signup select,
 .form-inputs-signup input {
   width: 60%;
@@ -39,3 +44,4 @@ a.login1 {
 .signup-btn {
   font-size: 24px;
 }
+
