--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,9 +27,12 @@
                       input_html: { autocomplete: "your hospital?" } %>
         </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-block py-2 signup-btn' %>
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-block py-2 signup-btn' %>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
 
 <%= render "devise/shared/links" %>
