--- a/app/assets/stylesheets/components/_card-participant.scss
+++ b/app/assets/stylesheets/components/_card-participant.scss
@@ -47,7 +47,7 @@
    align-items: flex-start;
 }
 
-#date-event-show {
+.date-event-show {
   margin-top: 1em;
   margin-left: 1em;
   font-size: 16px;
