--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,12 +10,19 @@
     </div>
     <div class="time text-center">
       <p><img src="https://img.icons8.com/dotty/80/000000/calendar-2.png" height="25px", width="25px"></p>
-      <p><%= @event.start.hour %>h<%= @event.start.min %> - <%= @event.end.hour %>h<%= @event.end.min %></p>
+      <p><%= @event.start.strftime("%H:%M") %> - <%= @event.end.strftime("%H:%M") %></p>
     </div>
   </div>
 
 <div class="content border-top my-1">
-  <h2 id="number-of-participants"><%= Reservation.where(event: @event).count %> participants :</h2>
+  <h2 id="number-of-participants"><%= Reservation.where(event: @event).count %>
+
+   <% if Reservation.where(event: @event).count > 1 %>
+    participants
+    <% else %>
+    participant
+   <% end %>
+   </h2>
   <div class="d-flex cards_participant">
     <% Reservation.where(event: @event).each do |resa| %>
       <%= link_to user_path(resa.user) , class: "link_to" do %>
