--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -6,7 +6,11 @@
   <div class="container">
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
-      <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
+     <% if @event.date == nil %>
+      <p class="date-event-show"><%= Date.today.strftime("%d/%m") %></p>
+     <% else %>
+       <p class="date-event-show"> <%= @event.date.day %>/<%= @event.date.month %></p>
+      <% end %>
       <% if current_user == event.user %>
         <div class="update-event">
            <%= link_to edit_event_path(event) do %>
