--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -10,7 +10,7 @@
     .event-image{
       background-size: cover;
       background-position: center;
-      height:22em;
+      height:10em;
     }
 
     .event-text{
@@ -47,6 +47,64 @@
     }
 }
 
+.card-agenda {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  position: relative
+}
+
+.card-agenda .btn-round{
+  font-size: 2em;
+  padding: 10px 15px;
+  position: absolute;
+  right: 0.5em;
+}
+
+.card-agenda .organiser-star{
+  position: absolute;
+  top: .5em;
+  right: .5em;
+  color: #F9D35F;
+  font-size: 2em;
+}
+
+.card-agenda img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-agenda h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+.past-event{
+  background-color: rgba(245, 245, 245, 1);
+  opacity: 0.5;
+}
+
+.card-agenda p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.card-agenda .card-agenda-infos {
+  padding: 16px;
+}
+
+
+
+
 .card-event-new {
   overflow: hidden;
   background: white;
@@ -59,31 +117,33 @@
   display: inline-grid;
   min-width:80%;
   margin: 1em;
+  &:first-child {
+    margin-left: 2em;
+  }
+
+  .event-image{
+    background-size: cover;
+    background-position: center;
+    height:65vh;
+   }
+
+  .card-title{
+    color:white;
+    font-weight: bold;
+    font-size: 5em;
+    margin: 1.5rem;
+  }
 
 
-    .event-image{
-      background-size: cover;
-      background-position: center;
-      height:65vh;
-     }
+  h2{
+     color: white;
+     margin-bottom:0;
 
-    .card-title{
-      color:white;
-      font-weight: bold;
-      font-size: 5em;
-      margin: 1.5rem;
-    }
-
-
-    h2{
-       color: white;
-       margin-bottom:0;
-
-    }
-    p{
-      font-size:2em;
-      color:white;
-    }
+  }
+  p{
+    font-size:2em;
+    color:white;
+  }
 }
 
 .card-top{
@@ -96,10 +156,7 @@
 }
 
 
-.past-event{
-  background-color: rgba(245, 245, 245, 1);
-  opacity: 0.5;
-}
+
 .card-event-infos-new{
   margin: 1.5rem
 }
@@ -131,8 +188,7 @@
 .cards-disc{
  width: 100%;
  overflow-y: scroll;
- margin-left: 1em;
-  }
+}
 
 
 // Smallest device
