--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -18,7 +18,7 @@
     <p class="mb-3"> <%= event.description %> </p>
     <% if current_user == event.user %>
       <div class="d-flex justify-content-between">
-        <%= render 'shared/chat_btn'  %>
+        <%= render 'shared/chat_btn', event: @event %>
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
     <%= render 'shared/participe_call_to_action' %>
