changes on max participants

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -23,6 +23,7 @@
       <br>
       <div class="third-block mt-5">
         <%= f.input :location, label: false, placeholder: 'Lieu' %>
+        <%= f.input :max_participants, as: :hidden  %>
            <div class="actions">
               <p>Nombre de participants</p>
             </div>
