--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,7 +7,7 @@
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
      <% if @event.date == nil %>
-      <p class="date-event-show"><%= Date.today.strftime("%d/%m") %></p>
+      <p class="date-event-show"><%= Date.today.strftime("%d %b %Y") %></p>
      <% else %>
        <p class="date-event-show"> <%= @event.date.day %>/<%= @event.date.month %></p>
       <% end %>
