--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -10,7 +10,7 @@
 </div> -->
 <div>
   <li class="nav-item dropdown">
-    <i class="fas fa-bell" class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
+    <i class="fas fa-bell" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
       <% current_user.unseen_notifications.each do |notification| %>
 
