--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -3,7 +3,7 @@
   <%#= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
   <div class="d-flex align-items-center">
     <div class="home-link d-flex justify-content-between mt-2">
-      <%= link_to dashboard_path(current_user) do  %>
+      <%= link_to dashboard_path() do  %>
         <i class="fas fa-home" style="margin-right:1em; margin-left:0.3em;"></i>
       <% end %>
       <h1><%= @name_page %></h1>
