creation of modal in dashboard for show event

--- a/app/views/shared/_card_new_event.html.erb
+++ b/app/views/shared/_card_new_event.html.erb
@@ -13,7 +13,7 @@
     <h2><i class="far fa-clock"></i> <%= "#{event.start.strftime("%I:%M %p")} - #{event.end.strftime("%I:%M %p")} "%></h2>
     <p><%= event.location %></p>
   </div>
-    <%= link_to "", event_path(event), class: "card-link" %>
+    <%= link_to "", "#", class: "card-link", data: { toggle: "modal", target: "#event-show-#{event.id}"} %>
    </div>
 </div>
 
