--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -67,3 +67,8 @@
   </div>
   <%= render 'shared/add_event_btn' %>
 </div>
+
+<%= render 'shared/events_modal', events: @user.hospital.events.sort_by {|event| event.start} %>
+
+
+
