--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -8,22 +8,23 @@
     </div>
   <%# end %>
 </div> -->
-<div>
-  <li class="nav-item dropdown">
-    <i class="fas fa-bell" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-      <% current_user.unseen_notifications.each do |notification| %>
-
-        <% raise  %>
+<div class="notification-dropwdown nav-item dropdown">
+  <i class="fas fa-bell" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
+  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+    <% notifications = current_user.unseen_notifications + current_user.seen_notifications  %>
+    <% if current_user.unseen_notifications.length > 0 %>
+      <% current_user.unseen_notifications.first(2).each do |notification| %>
         <div class="notification" style= "">
           <%= render 'shared/notification', notification: notification %>
         </div>
       <% end %>
-      <% current_user.seen_notifications.each do |notification| %>
-        <div class="notification seen">
-          <%= render 'shared/notification', notification: notification %>
-        </div>
-      <% end %>
-    </div>
-  </li>
+    <% end %>
+    <% current_user.seen_notifications.first(2).each do |notification| %>
+      <div class="notification seen">
+        <%= render 'shared/notification', notification: notification %>
+      </div>
+    <% end %>
+    <div class="dropdown-divider"></div>
+    <%= link_to "See more", notification_path, class: "dropdown-item text-center" %>
+  </div>
 </div>
