--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -14,7 +14,8 @@
         <li class="nav-item dropdown">
           <i class="fas fa-bars" class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-             <%= link_to "Mon Profil", dashboard_path, class: "dropdown-item" %>
+            <%= link_to "Créer un événement", new_event_path, class: "dropdown-item" %>
+            <%= link_to "Mon Profil", dashboard_path, class: "dropdown-item" %>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
