--- a/app/views/shared/_participe_call_to_action.html.erb
+++ b/app/views/shared/_participe_call_to_action.html.erb
@@ -1,9 +1,9 @@
- <div class="d-flex justify-content-between">
-        <%= link_to event_reservation_path(@event), method: :delete, remote: true do%>
-          <div class="btn-desinscrire">
-            <i class="fas fa-check"></i><%= " Participe" %>
-          </div>
-        <% end %>
-        <%= render 'shared/chat_btn'  %>
-      </div>
+<div class="d-flex justify-content-between">
+  <%= link_to event_reservation_path(@user, @event), method: :delete, remote: true do%>
+    <div class="btn-desinscrire">
+      <i class="fas fa-check"></i><%= " Participe" %>
+    </div>
+  <% end %>
+  <%= render 'shared/chat_btn'  %>
+</div>
 
