rendre un evenement complet

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -36,6 +36,17 @@
   }
 }
 
+.btn-complete {
+  background: #D9D9D9;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 1.3vh;
+  color: white;
+  margin-top: 2em;
+  width: fit-content;
+  height: fit-content;
+}
+
 .btn-desinscrire{
   background: grey;
   border-radius: 5px;
