--- a/app/views/shared/_notification.html.erb
+++ b/app/views/shared/_notification.html.erb
@@ -1,15 +1,26 @@
-<%= link_to user_path(notification.user) do %>
+
+<% if notification.class.name == "Event" %>
+  <%= link_to event_path(notification) do %>
   <% if notification.user.photo.attached? %>
       <%= cl_image_tag notification.user.photo.key, height: 50, width: 50, crop: :fill, class: "avatar" %>
   <% else %>
       <%= cl_image_tag "smiley-logo.jpg", height: 50, width: 50, crop: :fill, class: "avatar" %>
   <% end %>
-<% end %>
-<div class="notification-content">
-  <p><small><%= ((Time.now - notification.created_at) / 60).to_i %> minutes ago</small></p>
-  <% if notification.class.name == "Event" %>
-    <p>L'événement <strong> <%= link_to notification.name, event_path(notification), class: "link_to" %> </strong> organisé par <strong> <%= notification.user.username %> </strong> vient d'être créé. </p>
-  <% else %>
-    <p><strong> <%= notification.user.username %> </strong> a rejoint votre événement <strong> <%= link_to notification.event.name, event_path(notification.event), class: "link_to" %>.</strong></p>
+    <div class="notification-content">
+      <p><small><%= ((Time.now - notification.created_at) / 60).to_i %> minutes ago</small></p>
+      <p>L'événement <strong> <%= notification.name %> </strong> organisé par <strong> <%= notification.user.username %> </strong> vient d'être créé. </p>
+    </div>
   <% end %>
-</div>
+<% else %>
+  <%= link_to event_path(notification.event) do  %>
+    <% if notification.user.photo.attached? %>
+      <%= cl_image_tag notification.user.photo.key, height: 50, width: 50, crop: :fill, class: "avatar" %>
+    <% else %>
+      <%= cl_image_tag "smiley-logo.jpg", height: 50, width: 50, crop: :fill, class: "avatar" %>
+    <% end %>
+    <div class="notification-content">
+      <p><small><%= ((Time.now - notification.created_at) / 60).to_i %> minutes ago</small></p>
+      <p><strong> <%= notification.user.username %> </strong> a rejoint votre événement <strong> <%= notification.event.name %>.</strong></p>
+    </div>
+  <% end %>
+<% end %>
