--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -9,7 +9,9 @@
       <h1><%= @name_page %></h1>
     </div>
     <div class= "links-dash d-flex justify-content-between" style = "width:3em">
-        <%= render "shared/dropdown_notif" %>
+      <div id="notifications">
+        <%= render "shared/dropdown_notif", target_user: current_user %>
+      </div>
       <div>
         <li class="nav-item dropdown">
           <i class="fas fa-bars" class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
