--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -12,8 +12,8 @@
 }
 
 .topbar {
-  background-color: $blue;
-  height: 7em;
+background-image: linear-gradient(111.5deg, #1464c4 0.4%, #2198d6 100.2%);
+height: 7em;
   color:white;
   position:sticky;
   top:0;
