--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -1,23 +1,11 @@
-<!-- <div class="notification-topbar">
-  <%#= link_to notification_path, class: "link-bell" do %>
-  <i class="far fa-bell"></i>
-    <div class="button_badge ">
-      <div class= "d-inline-flex align-items-center">
-        <p class="number-of-notif"></p>
-      </div>
-    </div>
-  <%# end %>
-</div> -->
-<div class="notification-dropwdown nav-item dropdown">
+<div class="notification-dropwdown nav-item dropdown d-flex">
+  <div>
   <%= simple_form_for target_user, url: notification_seen_path, method: :post, remote: true, html: {id: "form-notification-seen"} do |f| %>
 
   <% end %>
-  <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
-  <div class="button_badge ">
-    <div class= "d-inline-flex align-items-center">
-      <p class="number-of-notif"></p>
-    </div>
   </div>
+  <div>
+  <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
     <% notifications = target_user.unseen_notifications + target_user.seen_notifications  %>
     <% if target_user.unseen_notifications.length > 0 %>
@@ -34,5 +22,6 @@
     <% end %>
     <div class="dropdown-divider"></div>
     <%= link_to "See more", notification_path, class: "dropdown-item text-center" %>
+  </div>
   </div>
 </div>
