--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -9,6 +9,11 @@
       <h1><%= @name_page %></h1>
     </div>
     <div class= "links-dash d-flex justify-content-between" style = "width:3em">
+      <div class="button_badge ">
+        <div class= "d-inline-flex align-items-center">
+          <p class="number-of-notif"></p>
+        </div>
+      </div>
       <div id="notifications">
         <%= render "shared/dropdown_notif", target_user: current_user %>
       </div>
