--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 <div class="card-agenda">
   <% if event.user == current_user %>
-    <p class="organiser-star"><i class="fas fa-star"></i></p>
+    <p class="organiser-star badge badge-pill badge-warning">Your Event</p>
   <% end %>
   <%= cl_image_tag event.photo.key%>
   <div class="card-agenda-infos">
