--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -10,9 +10,9 @@
     </div>
     <div class= "links-dash d-flex justify-content-between" style = "width:3em">
       <div class="button_badge ">
-        <div class= "d-inline-flex align-items-center">
+        <!-- <div class= ""> -->
           <p class="number-of-notif"></p>
-        </div>
+        <!-- </div> -->
       </div>
       <div id="notifications">
         <%= render "shared/dropdown_notif", target_user: current_user %>
