--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -4,6 +4,38 @@
   background: white;
   padding: 8px 16px;
   border: 1px solid rgb(235,235,235);
+
+  p{
+  font-size:small;
+    strong{
+      color:$light-blue;
+    }
+  }
+}
+
+.button_badge {
+  background-color: #fa3e3e;
+  border-radius: 50%;
+  z-index: 1;
+  font-size: 0.5em;
+  left: 1em;
+  top: -5px;
+  height: 2em;
+  width: 2em;
+  display: none;
+  position:absolute;
+
+  p{
+    color:white;
+    top: auto;
+    text-align: center;
+  }
+}
+
+.dropdown-item {
+  font-size:14px;
+  color:$light-blue;
+  font-weight:bold;
 }
 
 .notification.seen{
