--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -8,14 +8,13 @@
   <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
     <% notifications = target_user.unseen_notifications + target_user.seen_notifications  %>
-    <% if target_user.unseen_notifications.length > 0 %>
-      <% target_user.unseen_notifications.first(3).each do |notification| %>
-        <div class="notification unseen" >
-          <%= render 'shared/notification', notification: notification %>
-        </div>
-      <% end %>
+    <% target_user.unseen_notifications.each do |notification| %>
+      <p>ok ok ok</p>
+      <div class="notification unseen" >
+        <%= render 'shared/notification', notification: notification %>
+      </div>
     <% end %>
-    <% target_user.seen_notifications.first(3).each do |notification| %>
+    <% target_user.seen_notifications.each do |notification| %>
       <div class="notification seen">
         <%= render 'shared/notification', notification: notification %>
       </div>
