--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -1,26 +1,25 @@
 <div class="notification-dropwdown nav-item dropdown d-flex">
-  <div>
-  <%= simple_form_for target_user, url: notification_seen_path, method: :post, remote: true, html: {id: "form-notification-seen"} do |f| %>
 
-  <% end %>
-  </div>
   <div>
   <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
-  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-    <% notifications = target_user.unseen_notifications + target_user.seen_notifications  %>
-    <% target_user.unseen_notifications.each do |notification| %>
-      <p>ok ok ok</p>
-      <div class="notification unseen" >
-        <%= render 'shared/notification', notification: notification %>
-      </div>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <div>
+    <%= simple_form_for target_user, url: notification_seen_path, method: :post, remote: true, html: {id: "form-notification-seen"} do |f| %>
     <% end %>
-    <% target_user.seen_notifications.each do |notification| %>
-      <div class="notification seen">
-        <%= render 'shared/notification', notification: notification %>
-      </div>
-    <% end %>
-    <div class="dropdown-divider"></div>
-    <%= link_to "See more", notification_path, class: "dropdown-item text-center" %>
   </div>
+      <%#= target_user.unseen_notifications.first %>
+      <% target_user.unseen_notifications.first(3).each do |notification| %>
+        <div class="notification unseen" >
+          <%= render 'shared/notification', notification: notification %>
+        </div>
+      <% end %>
+      <% target_user.seen_notifications.first(3).each do |notification| %>
+        <div class="notification seen">
+          <%= render 'shared/notification', notification: notification %>
+        </div>
+      <% end %>
+      <div class="dropdown-divider"></div>
+      <%= link_to "See more", notification_path, class: "dropdown-item text-center" %>
+    </div>
   </div>
 </div>
