--- a/app/views/shared/_dropdown_notif.html.erb
+++ b/app/views/shared/_dropdown_notif.html.erb
@@ -1,12 +1,12 @@
-<div class="notification-dropwdown nav-item dropdown d-flex">
+<div class="notification-dropwdown nav-item dropdown ">
 
-  <div>
-  <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
         <div>
     <%= simple_form_for target_user, url: notification_seen_path, method: :post, remote: true, html: {id: "form-notification-seen"} do |f| %>
     <% end %>
   </div>
+  <div>
+  <i class="fas fa-bell toggle-notifications" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
       <%#= target_user.unseen_notifications.first %>
       <% target_user.unseen_notifications.first(3).each do |notification| %>
         <div class="notification unseen" >
