--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -22,16 +22,25 @@
   right: .5em;
 }
 
+.card-agenda .badge-pill{
+  font-size: 10px !important;
+
+}
 .card-agenda img {
   height: 100%;
   width: 120px;
   object-fit: cover;
 }
 
+.card-agenda .card-agenda-info .agenda-info-not-title{
+  margin-top: 9px !important;
+
+}
+
 .card-agenda h2 {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .past-event{
@@ -40,7 +49,7 @@
 }
 
 .card-agenda p {
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
