--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -9,14 +9,16 @@
   <% end %>
 <div class="card-agenda">
   <% if event.user == current_user %>
-    <p class="organiser-star badge badge-pill badge-warning">Your Event</p>
+    <p class="organiser-star badge badge-pill badge-warning">Votre Évenement</p>
   <% end %>
   <%= cl_image_tag event.photo.key%>
   <div class="card-agenda-infos">
     <h2> <%= event.name %></h2>
-    <p><i class="far fa-clock"></i> <%= "#{event.start.strftime("%I:%M %p")} - #{event.end.strftime("%I:%M %p")} "%></p>
-    <p><i class="far fa-user"></i> <%= "#{event.reservations.count} participants" %></p>
-    <p><i class="fas fa-map-marker-alt"></i> <%= event.location%></p>
+      <div classs="agenda-info-not-title">
+        <p><i class="far fa-clock"></i> <%= "#{event.start.strftime("%I:%M %p")} - #{event.end.strftime("%I:%M %p")} "%></p>
+        <p><i class="far fa-user"></i> <%= "#{event.reservations.count} participants" %></p>
+        <p><i class="fas fa-map-marker-alt"></i> <%= event.location%></p>
+      </div>
   </div>
 </div>
 
