--- a/app/views/shared/_participe_call_to_action.html.erb
+++ b/app/views/shared/_participe_call_to_action.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between">
-  <%= link_to event_reservation_path(@event), method: :delete, remote: true do%>
+  <%= link_to event_reservation_path(@user, @event), method: :delete, remote: true do%>
     <div class="btn-desinscrire">
       <i class="fas fa-check"></i><%= " Participe" %>
     </div>
