--- a/app/views/shared/_events_modal.html.erb
+++ b/app/views/shared/_events_modal.html.erb
@@ -20,7 +20,13 @@
             </div>
 
           <div class="content border-top my-1">
-            <h2 id="number-of-participants"><%= Reservation.where(event: event).count %> participants :</h2>
+            <h2 id="number-of-participants"><%= Reservation.where(event: @event).count %>
+             <% if Reservation.where(event: @event).count > 1 %>
+              participants
+              <% else %>
+              participant
+             <% end %>
+             </h2>
             <div class="d-flex cards_participant">
               <% Reservation.where(event: event).each do |resa| %>
                 <%= link_to user_path(resa.user) , class: "link_to" do %>
