--- a/app/views/shared/_modal_show_event.html.erb
+++ b/app/views/shared/_modal_show_event.html.erb
@@ -33,7 +33,11 @@
       <%= render 'shared/participe_call_to_action' %>
     </div>
     <div class="participe-pas">
-      <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+      <% if event.reservations.count < event.max_participants %>
+        <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+      <% else %>
+        <p class="btn-complete d-block">Complet</p>
+      <% end %>
     </div>
     <% end %>
   </div>
