--- a/app/views/shared/_card_new_event.html.erb
+++ b/app/views/shared/_card_new_event.html.erb
@@ -1,9 +1,5 @@
 <div class="card-event-new card-home-new  <%= 'past-event' if event.end < DateTime.now %>">
-  <% if event.photo.attached? %>
-    <div class='event-image' style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path event.photo.key%>')"></div>
-  <% else %>
-    <div class='event-image' style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('url('https://images.unsplash.com/photo-1503482618211-c70b46ede8b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80')"></div>
-  <% end %>
+     <div class='event-image' style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path event.photo.key%>')">
   <div class="card-top">
     <h1 class="card-title"><%= event.name %></h1>
   </div>
@@ -13,9 +9,10 @@
     <% if (event.max_participants - event.reservations.count) == 0 %>
       <p><em>Complet</em></p>
     <% else %>
-      <p><i class="far fa-user"></i>  Il reste <%= (event.max_participants - event.reservations.count) if !event.max_participants.nil? %> places</p>
+      <p><i class="far fa-user"></i>  Il reste <%= (event.max_participants - event.reservations.count) unless event.max_participants.nil? %> places</p>
     <% end %>
   </div>
     <%= link_to "", "#", class: "card-link", data: { toggle: "modal", target: "#event-show-#{event.id}"} %>
+  </div>
 </div>
 
