--- a/app/views/shared/_modal_show_event.html.erb
+++ b/app/views/shared/_modal_show_event.html.erb
@@ -27,11 +27,13 @@
         <%= render 'shared/chat_btn'  %>
       </div>
     <% elsif Reservation.where(user: current_user, event: event).exists? %>
-    <%= render 'shared/participe_call_to_action' %>
+    <%= render 'shared/participe_call_to_action', reservation: Reservation.where(user: current_user, event: event).first %>
     <% else %>
     <div class="participe d-none">
-      <%= render 'shared/participe_call_to_action' %>
-    </div>
+      <%#= render 'shared/participe_call_to_action' %>
+      <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+
+     </div>
     <div class="participe-pas">
       <% if event.reservations.count < event.max_participants %>
         <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
@@ -42,3 +44,4 @@
     <% end %>
   </div>
 </div>
+
