--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -24,7 +24,7 @@
         </div>
         <div class="third-block mb-5">
           <%= f.input :location, label: false, placeholder: 'Lieu' %>
-          <%= f.input :max_participants, input_html: {value: counter}, as: :hidden  %>
+          <%= f.input :max_participants, as: :hidden  %>
             <div class="actions">
               <p>Nombre de participants</p>
             </div>
