changes on creation event form

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,7 +6,7 @@
 @import "simple-form";
 @import "message";
 @import "card-participant";
-
+@import "create-form";
 @import "tab";
 @import "button";
 @import "signin-form";
