--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -6,29 +6,29 @@
 </div>
 
 
-<div class="container-fluid lower-page ">
+<div class="container-fluid lower-page eventcreate">
   <div class="row justify-content-center" >
-    <div class="events-info col-12 col-lg-8">
+    <div class="events-info col-10 col-lg-6">
       <%= simple_form_for(@event)  do |f| %>
         <div class="first-block">
           <%= f.input :photo, input_html: { id: 'photo-input', class: 'd-none'}, label: false %>
           <%= f.input :name, label: false,input_html: {class: 'ml-0'}, placeholder:'Nom de l\'événement' %>
-          <%= f.input :description,label: false, as: :text, placeholder: 'Description' %>
+          <%#= f.input :description,label: false, as: :text, placeholder: 'Description' %>
         </div>
         <div class="second-block">
-          <%= f.input :date, label: false, as: :string, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
-          <div class="d-flex flex-start">
-            <%= f.input :start, label: false, as: :string, required: true, input_html: {class: "startpicker time mr-4"}, placeholder:'Starting hour' %>
+            <%= f.input :date, label: false, as: :string, required: true, input_html: {class: "datepicker"}, placeholder: "YYYY/MM/DD" %>
+          <div class="d-flex justify-content-space-between horaires">
+            <%= f.input :start, label: false, as: :string, required: true, input_html: {class: "startpicker time mr-3"}, placeholder:'Starting hour' %>
             <%= f.input :end, label: false, as: :string, required: true, input_html: {class: "endpicker time"}, placeholder:'Ending time' %>
           </div>
         </div>
         <div class="third-block mb-5">
           <%= f.input :location, label: false, placeholder: 'Lieu' %>
-          <%= f.input :max_participants, input_html: {value: counter}, as: :hidden  %>
-            <div class="actions">
+          <%= f.input :max_participants, as: :hidden  %>
+            <div class="actions maxpart">
               <p>Nombre de participants</p>
             </div>
-           <div class="three-blocks">
+           <div class="three-blocks justify-content-center">
             <div class="actions">
               <a class="btn round-bordered incrementer-minus">-</a>
             </div>
